--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
           name: Publish to Rubygems
           command: |
             gem build coda_docs.gemspec
-            gem push "coda_docs-$(git describe --tags).gem"
+            gem push "coda_docs-*.gem"
 workflows:
   version: 2
   build-deploy:
@@ -83,7 +83,5 @@ workflows:
       # - build
       - deploy:
           filters:
-            tags:
-              only: /.*/
             branches:
-              ignore: /.*/
+              only: master
