--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 ---
 sudo: false
 language: ruby
-cache: bundler
 rvm:
-  - 2.5.3
-before_install: gem install bundler -v 1.16.6
+  - 2.2
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
+  - jruby
+before_install:
+  - gem install bundler -v '< 2'
+cache: bundler
